samples/_failures_safe/1761554094_bb4749_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2967c1cd.c: In function ‘main’:
./samples/SAFE/__tmp_2967c1cd.c:139:5: error: expected expression at end of input
  139 |     mat2.cols = read_int("Columns: ",
      |     ^~~~
./samples/SAFE/__tmp_2967c1cd.c:139:17: error: too few arguments to function ‘read_int’
  139 |     mat2.cols = read_int("Columns: ",
      |                 ^~~~~~~~
./samples/SAFE/__tmp_2967c1cd.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_2967c1cd.c:139:5: error: expected declaration or statement at end of input
  139 |     mat2.cols = read_int("Columns: ",
      |     ^~~~
